# NERD_2_P4_CONTROLLER

./: .gitignore  IP Addresses.txt  sdkconfig  sdkconfig.defaults  tree.txt
components/nerd_io/: CMakeLists.txt  nerd_m31.c
components/nerd_io/include/: nerd_m31.h
components/ui/: CMakeLists.txt  MERGE_REPORT.md  filelist.txt  project.info  ui.c  ui.h  ui_helpers.c  ui_logic.c  ui_logic.h  ui_nav.c  ui_nav.h
components/ui/components/: ui_comp_hook.c
components/ui/images/: ui_img_btn_autom_png.c  ui_img_btn_aux_png.c  ui_img_btn_debug_png.c  ui_img_btn_home_png.c  ui_img_btn_log_png.c  ui_img_btn_main_off_png.c  ui_img_btn_main_on_png.c  ui_img_btn_main_png.c  ui_img_btn_z_botton_png.c  ui_img_btn_z_top_png.c  ui_img_icn_head_png.c  ui_img_icn_time_1_png.c  ui_img_icn_time_2_png.c  ui_img_menu_bar_png.c  ui_img_roller_bg_png.c  ui_img_top_bar_png.c
components/ui/screens/: ui_autom_screen.c  ui_aux_screen.c  ui_debug_screen.c  ui_debug_screen.h  ui_log_screen.c  ui_log_screen.h  ui_main_screen.c  ui_main_screen.h  ui_settings_screen.c  ui_settings_screen.h  ui_splash_screen.c
components/ui_BACKUP_BEFORE_NAV/: CMakeLists.txt  ui.c  ui_events.h  ui_helpers.h
components/ui_BACKUP_BEFORE_NAV/images/: ui_img_1530556444.c  ui_img_625624875.c  ui_img_arrow_down_png.c  ui_img_arrow_up_png.c  ui_img_btn_settings_png.c  ui_img_logo_negativo_traspsrente_130_px_png.c
components/ui_BACKUP_BEFORE_NAV/screens/: ui_autom_screen.c  ui_autom_screen.h  ui_aux_screen.c  ui_aux_screen.h  ui_debug_screen.c  ui_log_screen.c  ui_main_screen.h  ui_settings_screen.c  ui_splash_screen.h
main/: CMakeLists.txt  ethernet_manager.c  ethernet_manager.h  idf_component.yml  main.c  nerd_sensor_client.c  nerd_sensor_client.h
